--- a/app/src/main/res/layout/league_list_row.xml
+++ b/app/src/main/res/layout/league_list_row.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Name league"
+        android:text="@string/league_list_row_name_league"
         android:textColor="#000"
         android:textSize="16sp" />
 
@@ -29,34 +29,34 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="Teams of league: "
+        android:text="@string/league_list_row_teams_of_league"
         android:textSize="14sp" />
 
     <TextView
         android:id="@+id/numberOfTeams"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="number"
-        android:textSize="14sp"
         android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/teamsofleague"
         android:layout_toRightOf="@+id/teamsofleague"
-        android:layout_toEndOf="@+id/teamsofleague" />
+        android:text="@string/league_list_row_number"
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/league"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="short league"
         android:layout_alignBottom="@+id/caption"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text="@string/league_list_row_short_league" />
+
     <TextView
         android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="year"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-
+        android:text="@string/league_list_row_year" />
 </RelativeLayout>
