--- a/app/src/main/res/layout/dialog_photo.xml
+++ b/app/src/main/res/layout/dialog_photo.xml
@@ -10,20 +10,20 @@
         android:id="@+id/dialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Photo"
+        android:text="@string/dialog_photo_photo"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
+        android:id="@+id/buttonGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Load from gallery"
-        android:id="@+id/buttonGallery" />
+        android:text="@string/dialog_photo_load_from_gallery" />
 
     <Button
+        android:id="@+id/buttonCamera"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take photo"
-        android:id="@+id/buttonCamera"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:text="@string/dialog_photo_take_photo" />
 
 </LinearLayout>
