--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -55,7 +55,7 @@
             android:layout_toEndOf="@+id/firstteam"
             android:layout_toRightOf="@+id/firstteam"
             android:maxLength="10"
-            android:text="ht"
+            android:text="@string/match_list_row_hometeam"
             android:textColor="@color/title"
             android:paddingLeft="10dp" />
 
@@ -68,7 +68,7 @@
             android:layout_toLeftOf="@+id/secondteam"
             android:layout_toStartOf="@+id/secondteam"
             android:maxLength="10"
-            android:text="at"
+            android:text="@string/match_list_row_awayteam"
             android:textColor="@color/title"
             android:paddingRight="10dp" />
 
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/awayTeam"
             android:layout_centerHorizontal="true"
-            android:text="time"
+            android:text="@string/match_list_row_time"
             android:textColor="@color/title" />
 
         <TextView
@@ -88,7 +88,7 @@
             android:layout_alignTop="@+id/homeTeam"
             android:layout_centerHorizontal="true"
             android:maxLength="10"
-            android:text=" - "
+            android:text="@string/basic_line"
             android:textColor="@color/title" />
 
         <TextView
@@ -98,7 +98,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:maxLength="10"
-            android:text="status"
+            android:text="@string/match_list_row_status"
             android:textColor="@color/title" />
     </RelativeLayout>
     </android.support.v7.widget.CardView>
