--- a/app/src/main/res/layout/users_list_row.xml
+++ b/app/src/main/res/layout/users_list_row.xml
@@ -21,7 +21,7 @@
         android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
-        android:text="pos"
+        android:text="@string/user_list_row_pos"
         android:textSize="16sp" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_marginLeft="72dp"
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif"
-        android:text="name"
+        android:text="@string/user_list_row_name"
         android:textColor="#000"
         android:textSize="16sp" />
 
@@ -39,13 +39,13 @@
         android:id="@+id/textView7UserPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_toEndOf="@+id/textView3"
+        android:layout_toRightOf="@+id/textView3"
         android:fontFamily="sans-serif"
         android:paddingTop="5dp"
-        android:text="points"
-        android:textSize="14sp"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3" />
+        android:text="@string/user_list_row_points"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -56,7 +56,7 @@
         android:layout_below="@+id/textViewUserRateName"
         android:fontFamily="sans-serif"
         android:paddingTop="5dp"
-        android:text="Points: "
+        android:text="@string/user_list_row_text_points"
         android:textSize="14sp" />
 
 </RelativeLayout>
