--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -20,5 +20,11 @@
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
     </style>
 
+    <style name="StatusBarColor" parent="AppBaseTheme">
+        <item name="android:statusBarColor">#F5F5F5
+        </item>
+    </style>
+
+
 
 </resources>
