--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,4 +55,9 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="StatusBarColor" parent="AppBaseTheme">
+        <item name="android:statusBarColor">#F5F5F5
+        </item>
+    </style>
+
 </resources>
