--- a/app/src/main/res/layout/fragment_cuurent_user_rate.xml
+++ b/app/src/main/res/layout/fragment_cuurent_user_rate.xml
@@ -1,34 +1,38 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.tuesda.walker.circlerefresh.CircleRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/refresh_layout_users_rate"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.CurrentUserRateFragment"
-    android:id="@+id/Table">
+    app:AniBackColor="@color/colorPrimary"
+    app:AniForeColor="#ffffffff"
+    app:CircleSmaller="2">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayoutRate"
-        android:backgroundTint="@color/colorPrimaryDark"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/Table"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".Fragments.CurrentUserRateFragment">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_user_rate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="0dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="0dp" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:scrollbars="vertical" />
 
-    <com.github.rahatarmanahmed.cpv.CircularProgressView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/progress_view_user_rate"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:cpv_animAutostart="true"
-        app:cpv_indeterminate="true"
-        app:cpv_color="@color/colorPrimaryDark"
-        android:layout_gravity="center" />
 
-</FrameLayout>
+        <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/progress_view_user_rate"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            app:cpv_animAutostart="true"
+            app:cpv_color="@color/colorPrimaryDark"
+            app:cpv_indeterminate="true" />
+
+    </FrameLayout>
+</com.tuesda.walker.circlerefresh.CircleRefreshLayout>
