--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -186,6 +186,7 @@
                         android:textSize="@dimen/material_text_subhead" />
 
                     <RelativeLayout
+                        android:id="@+id/languagechange"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
