--- a/app/src/main/res/layout/fragment_rate.xml
+++ b/app/src/main/res/layout/fragment_rate.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/white"
     android:clickable="false"
     android:id="@+id/containerRate">
-    <!--android:padding="8dp"-->
+
     <RelativeLayout
         android:id="@+id/relLy"
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
-            <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <ImageView
                 android:id="@+id/imageAwayTeam"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
