--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -28,7 +28,7 @@
         android:paddingRight="16dp"
         android:paddingTop="8dp">
 
-        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <ImageView
             android:id="@+id/firstteam"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -37,7 +37,7 @@
             android:layout_alignParentTop="true"
             android:src="@drawable/prof" />
 
-        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <ImageView
             android:id="@+id/secondteam"
             android:layout_width="50dp"
             android:layout_height="50dp"
