--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -18,11 +18,11 @@
 
 
         <ImageView
-            android:layout_width="@dimen/logo_w_h"
+            android:layout_width="141dp"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/soccer_ball" />
+            android:src="@drawable/soccer_football_icon" />
 
         <TextView
             android:layout_width="wrap_content"
