--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,15 +12,17 @@
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/margin_16dp">
+        android:padding="@dimen/margin_16dp"
+        android:weightSum="1">
 
 
         <ImageView
-            android:layout_width="@dimen/logo_w_h"
+            android:layout_width="141dp"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/soccer_ball" />
+            android:src="@drawable/soccer_football_icon"
+            android:layout_weight="0.17" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
