--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -34,8 +34,7 @@
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/prof" />
+            android:layout_alignParentTop="true" />
 
         <ImageView
             android:id="@+id/secondteam"
@@ -43,8 +42,7 @@
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/prof" />
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/homeTeam"
