--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:background="@color/colorPrimary"
     android:fitsSystemWindows="true"
-    tools:context=".Activities.LoginActivity">
+    tools:context=".Activity.LoginActivity.LoginActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
