--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_main"
     android:orientation="vertical"
-    tools:context=".Activities.MainActivity">
+    tools:context=".Activity.MainActivity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
