--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="info.androidhive.firebase.Activities.NavigationDrawerActivity">
+    tools:context=".Activity.NavigationDrawerActivity.NavigationDrawerActivity">
 
 </RelativeLayout>
