--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".Activities.MainActivity"
+    tools:context=".Activity.MainActivity.MainActivity"
     android:weightSum="1">
 
     <android.support.design.widget.TabLayout
